# EL3XIR

./: .gitignore  Makefile  README.md  compose.yaml
docker/: Dockerfile  settings.cfg  (+7 more)
src/rehosting-framework/: .gitignore  README.md  compose.yaml  pyproject.toml
src/rehosting-framework/boot-scripts/: boot-huawei-p20lite-secmon.py  boot-intel-n5x-secmon.py  boot-nvidia-t186-secmon.py  boot-nxp-imx8mq-secmon.py  boot-samsung-s6-secmon.py  boot-samsung-s7-secmon.py  boot-xilinx-zynqmp-secmon.py  qemu-serial-receiver.py
src/rehosting-framework/secmonRehosting/: __init__.py  logging.py
src/rehosting-framework/secmonRehosting/helperScripts/: __init__.py  avatar-list-registers.py  breakpoint_handler.py  breakpoint_handling_runner.py  colored_register_printer.py  convenient_avatar.py  exception_interpreter.py  in_memory_buffer_peripheral.py  keystone.py  struct.py  target_bridge.py
src/rehosting-framework/secmonRehosting/rehostingEnvironments/: avatar_factory_memory_mapping.py  call_into_secmon_strategy.py  rehosting_context.py  secmon_runner.py  structs.py
src/rehosting-framework/secmonRehosting/rehostingEnvironments/huaweiP20/: factories.py  huaweiP20_boot_patcher.py  huaweiP20_call_into_secmon_strategy.py
src/rehosting-framework/secmonRehosting/rehostingEnvironments/imx8mq/: factories.py  imx8mq_boot_patcher.py  imx8mq_call_into_secmon_strategy.py
src/rehosting-framework/secmonRehosting/rehostingEnvironments/intelN5x/: factories.py  intelN5x_boot_patcher.py  intelN5x_call_into_secmon_strategy.py
src/svf/tools/SecMonFuzz/: CMakeLists.txt  smc_type_finder.cpp
(+352 files in other folders)
