[tool.black]
line-length = 120

[tool.poetry]
name = "secmon-rehosting-framework"
version = "0.0.1"
description = ""
authors = [
    "Fabian Müller <fabian0.mueller@fau.de>",
    "Christian Lindenmeier <christian.lindenmeier@fau.de>"
]
license = "Unlicense"
packages = [
    { include = "secmonRehosting" }
]

[tool.poetry.dependencies]
python = "^3.6"
avatar2 = { path = "./../avatar2" }
click = "^7.1.2"
keystone-engine = "^0.9.2"
coloredlogs = "^15.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
